--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
       {
-        "src": "web-server/src/app.js",
+        "src": "hosted-weather-app/web-server/src/app.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/web-server/src/app.js"
+        "dest": "hosted-weather-app/web-server/src/app.js"
       }
     ]
   }
